# tombstone_optional

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
tests/: CMakeLists.txt  assignment.cpp  comparisons.cpp  constexpr.cpp  constructors.cpp  hash.cpp  in_place.cpp  interface.hpp  noexcept.cpp  nullopt.cpp  observers.cpp  swap.cpp  traits.cpp  type_traits.cpp
tombstone_optional/include/zxshady/: optional.hpp  optional_cpp20.hpp  optional_cpp20_fwd.hpp  optional_fwd.hpp
